<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/layout"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autenticate_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyA_label" />

                <EditText
                    android:id="@+id/editTextKeyA"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyB_label" />

                <EditText
                    android:id="@+id/editTextKeyB"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sel_llave_label" />

                <RadioGroup
                    android:id="@+id/rBtnGrp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonkeyA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/keyA" />

                    <RadioButton
                        android:id="@+id/radioButtonkeyB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/keyB" />
                </RadioGroup>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_write_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

            <Button
                android:id="@+id/buttonLeerbloque"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/leer_bloque_button" />

            <EditText
                android:id="@+id/editTextBloqueLeido"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="text" />

            <Button
                android:id="@+id/buttonEscribirBloque"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/escribir_bloque_button" />

            <EditText
                android:id="@+id/editTextBloqueAEscribir"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <Button
                android:id="@+id/buttonRegresar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Regresar" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
