<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/datosView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Datos del usuario" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dip"
            android:text="@string/computer_name_label" />
        <EditText
            android:id="@+id/computer_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/introduce_computer_name"
            android:inputType="text"
            android:singleLine="true"
            android:text=""
            android:importantForAutofill="no" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dip"
            android:text="@string/computer_ram_label" />
        <EditText
            android:id="@+id/computer_ram"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/introduce_computer_ram"
            android:inputType="text"
            android:singleLine="true"
            android:text=""
            android:importantForAutofill="no" />
    </LinearLayout>
    <Button
        android:id="@+id/write_tag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/write_to_tag_button_label" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dip"
            android:text="Hora de ingreso:" />
        <EditText
            android:id="@+id/hora"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="Hora"
            android:inputType="text"
            android:singleLine="true"
            android:text=""
            android:importantForAutofill="no" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dip"
            android:text="Cancha:" />
        <EditText
            android:id="@+id/cancha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="Cancha"
            android:inputType="text"
            android:singleLine="true"
            android:text=""
            android:importantForAutofill="no" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="Cantidad de Horas:"
            android:textColor="@color/colorAccent"
            android:textSize="19sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/price_pick_background"
            android:padding="10dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_product_remove"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_remove_white_24dp"/>

            <TextView
                android:id="@+id/text_product_quantity_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="1"/>

            <ImageView
                android:id="@+id/image_product_add"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/add_white"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Precio"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/text_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="$60.00"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />
        <Button
            android:id="@+id/button_add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Rentar">

        </Button>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/botonrecarga"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="25dp"
            android:text="Recarga"
            android:onClick="onClick"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/botonhistorial"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="86dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="15dp"
            android:onClick="onClick"
            android:layout_marginEnd="25dp"
            android:text="Historial"
            android:textStyle="bold" />

    </RelativeLayout>







</LinearLayout>